[project]
name = "pyutils-jvm"
version = "0.1.1"
description = "Common utilities for python projects"
authors = [
    {name = "Jorrit Vander Mynsbrugge",email = "44178217+jorritvm@users.noreply.github.com"}
]

readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]

[tool.poetry]
packages = [{ include = "pyutils" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
